Fix extra in-stroke undo step when using Transform and Move tools

BUG:444791